# data_science_hw1

./: Hw1.ipynb  pyproject.toml
.ipynb_checkpoints/: Hw1-checkpoint.ipynb
